--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
       </head>
 <body>
     <header>
-       <a href="./home.html">home</a>
+       <a href="./index.html">index</a>
        <a href="./contact.html">contact</a>
        <a href="./product.html">product</a>
     </header>
     <section>
-       <h1>home</h1>
+       <h1>index</h1>
     </section>
     <footer>
         &copy; Allright reserved 2023.
